# RayTracing

./: CMakeLists.txt  README.md  main.cpp
data/: scene
header/: Grid.h  ImageWriter.h  Logger.h  Material.h  Point.h  Ray.h  SceneReader.h  Triangle.h  Vector.h
src/: Grid.cpp  ImageWriter.cpp  Logger.cpp  Point.cpp  Ray.cpp  SceneReader.cpp  Triangle.cpp
